# moonix

./: .gitignore  README.md  justfile  moon.mod.json
_cmd_disabled/xsh_test/: cli_cycle_wbtest.mbt  moon.pkg
_shell_disabled/: ast_executor.mbt  executor.mbt  moon.pkg  shell_snapshot_test.mbt  shell_test.mbt
components/e2e/: justfile  moon.mod.json
components/shell/: justfile  moon.mod.json
docs/: DESIGN.md  bitfs.md  wasi_posix.md
experiments/: README.md
experiments/deno_host/: README.md  component_test.ts  deno.json  moonix_component_test.ts  moonix_shell_test.ts  virtual_clock.ts  virtual_fs_test.ts  virtual_poll.ts  virtual_sockets.ts
experiments/moonix_component/: component.wasm  justfile  moon.mod.json
experiments/moonix_shell/: component.wasm  justfile  moon.mod.json  patch_wasm.py
hosts/deno/: deno.json  virtual_cli.ts  virtual_fs.ts  virtual_io.ts  virtual_random.ts  virtual_sockets.ts
hosts/wasmtime/: Cargo.toml  README.md
hosts/wasmtime/src/: fs_bridge.rs  main.rs  p3.rs
hosts/wasmtime/tests/: fs_bridge_test.rs  memfs_test.rs  virtual_kernel_test.rs
src/a2a/: client.mbt  types.mbt
src/agent/: agent.mbt  moon.pkg.json  types.mbt
src/bitfs_adapter/: bitfs_adapter.mbt  bitfs_adapter_test.mbt  moon.pkg
src/capability/: capability_test.mbt  presets.mbt  set.mbt  types.mbt
src/effect/: effect_test.mbt  log.mbt  types.mbt
src/fs/: backend.mbt  memfs.mbt  memfs_test.mbt  types.mbt
src/gitfs/: backend.mbt  git_traits.mbt  gitfs_test.mbt  moon.pkg.json  ops.mbt  snapshot.mbt  types.mbt
src/llm/: types.mbt
src/mcp/: client.mbt  (+1 more)
(+121 files in other folders)
